--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,14 @@ jobs:
       matrix:
         builder: [macos-latest, ubuntu-latest]
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: build
-        run: make
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: build
+      run: make
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.TOKEN }}
+        publish_branch: main
+        publish_dir: ./
