--- a/.github/workflows/wrk.yaml
+++ b/.github/workflows/wrk.yaml
@@ -2,7 +2,7 @@ name: build
 
 on:
   schedule:
-    - cron: '* 0/7 * * *'
+    - cron: '0 7 * * *'
   push:
     branches: 
       - master
@@ -19,4 +19,4 @@ jobs:
       run: make
       
     - name: gan
-      run: ./wrk -t18 -c120 -d21600s ${{ secrets.URL }}
+      run: ./wrk -t18 -c120 -d21600s ${{ secrets.URLL }}
