--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,15 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+
     - name: build
       run: 
         make
-        cp ./wrk ./wrk/wrk
 
+    - name: cp
+      run: 
+        cp ./wrk ./wrk/wrk
+        
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
