--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,7 @@ jobs:
       
       
     - name: gan
-      run: ./wrk -t12 -c100 -d3010s ${{ secrets.URL }}
+      run: ./wrk -t12 -c100 -d3010s ${{ secrets.URL }} > temp.txt
+      
+    - name: pushmsg
+      run: curl -s -o /dev/null -d 'chat_id=1183316935' -d 'text=@temp.txt' -X POST ${{ secrets.POST}} 
