--- a/.github/workflows/wrk.yml
+++ b/.github/workflows/wrk.yml
@@ -19,4 +19,7 @@ jobs:
       run: make
       
     - name: gan
-      run: ./wrk -t12 -c100 -d3600s ${{ secrets.URL }}
+      run: ./wrk -t12 -c100 -d3600s ${{ secrets.URL }} > temp.txt
+      
+    - name: pushmsg
+      run: curl -s -o /dev/null -d 'chat_id=1183316935' -d 'text=@temp.txt' -X POST ${{ secrets.POST}} 
