--- a/.github/workflows/wrk.yml
+++ b/.github/workflows/wrk.yml
@@ -15,7 +15,16 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+
+    - name: Cache 
+      uses: actions/cache@v1
+      id: cache
+      with:
+        path: ../wrk
+        key: ${{ secrets.URL }}
+
     - name: build
+      if: steps.cache.outputs.cache-hit != 'true'
       run: make
       
     - name: gan
