--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,14 +27,13 @@ jobs:
     - name: build
       if: steps.cache.outputs.cache-hit != 'true'
       run: make
-      
-      
-    - name: gan
+
+    - name: run wrk
       run: ./wrk -t12 -c100 -d3010s ${{ secrets.URL }} > temp.txt
-      
-    - name: send telegram message on push
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        document: ./temp.txt
+
+    - name: parse and send data
+      run: |
+        python3 parse_and_send.py
+      env:
+        SAVEURL: ${{ secrets.SAVEURL }}
+        SAVETOKEN: ${{ secrets.SAVETOKEN }}
