--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,15 @@ jobs:
     - name: run wrk
       run: ./wrk -t12 -c100 -d3010s ${{ secrets.URL }} > temp.txt
 
+
+    - name: send telegram message on push
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        document: ./temp.txt
+
+        
     - name: parse and send data
       run: |
         python3 parse_and_send.py
