--- a/.github/workflows/10.yml
+++ b/.github/workflows/10.yml
@@ -31,6 +31,13 @@ jobs:
     - name: gan
       run: ./wrk -t12 -c150 -d550s ${{ secrets.URL }} > temp.txt
       
+    - name: send telegram message on push
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        document: ./temp.txt
+        
     - name: parse and send data
       run: |
         python3 parse_and_send.py
