--- a/.github/workflows/wrk.yaml
+++ b/.github/workflows/wrk.yaml
@@ -30,12 +30,12 @@ jobs:
     - name: gan
       run: ./wrk -t18 -c120 -d21300s ${{ secrets.URLL }} > temp.txt
       
-    # - name: send telegram message on push
-    #   uses: appleboy/telegram-action@master
-    #   with:
-    #     to: ${{ secrets.TELEGRAM_TO }}
-    #     token: ${{ secrets.TELEGRAM_TOKEN }}
-    #     document: ./temp.txt
+    - name: send telegram message on push
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        document: ./temp.txt
     
     - name: parse and send data
       run: |
