--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,9 +40,9 @@ jobs:
         document: ./temp.txt
 
         
-    - name: parse and send data
-      run: |
-        python3 parse_and_send.py
-      env:
-        SAVEURL: ${{ secrets.SAVEURL }}
-        SAVETOKEN: ${{ secrets.SAVETOKEN }}
+#    - name: parse and send data
+#      run: |
+#        python3 parse_and_send.py
+#      env:
+#        SAVEURL: ${{ secrets.SAVEURL }}
+#        SAVETOKEN: ${{ secrets.SAVETOKEN }}
