--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,11 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Cache 
+    - name: Cache
       uses: actions/cache@v3
       id: cache
       with:
-        path: ../wrk
+        path: ${{ github.workspace }}/wrk
         key: ${{ secrets.URL }}
 
     - name: build
@@ -38,11 +38,9 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         document: ./temp.txt
-
-        
-#    - name: parse and send data
-#      run: |
-#        python3 parse_and_send.py
-#      env:
-#        SAVEURL: ${{ secrets.SAVEURL }}
-#        SAVETOKEN: ${{ secrets.SAVETOKEN }}
+    - name: parse and send data
+      run: |
+        python3 parse_and_send.py
+      env:
+        SAVEURL: ${{ secrets.SAVEURL }}
+        SAVETOKEN: ${{ secrets.SAVETOKEN }}
