--- a/.github/workflows/wrk.yaml
+++ b/.github/workflows/wrk.yaml
@@ -16,11 +16,11 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Cache 
-      uses: actions/cache@v4
+    - name: Cache
+      uses: actions/cache@v3
       id: cache
       with:
-        path: ../wrk
+        path: ${{ github.workspace }}/wrk
         key: ${{ secrets.URL }}
 
     - name: build
