--- a/.github/workflows/wrk.yml
+++ b/.github/workflows/wrk.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: build
       if: steps.cache.outputs.cache-hit != 'true'
-      run: make
+      run: make -j
       
     - name: gan
       run: ./wrk -t12 -c100 -d3600s ${{ secrets.URL }} > temp.txt
