--- a/.github/workflows/wrk.yml
+++ b/.github/workflows/wrk.yml
@@ -27,10 +27,22 @@ jobs:
       if: steps.cache.outputs.cache-hit != 'true'
       run: make -j
       
+    - name: Check URL accessibility
+      id: check_url
+      run: |
+        if curl -s -f -o /dev/null ${{ secrets.URL }}; then
+          echo "::set-output name=accessible::true"
+        else
+          echo "::set-output name=accessible::false"
+          echo "URL is not accessible, skipping subsequent steps"
+        fi
+      
     - name: gan
+      if: steps.check_url.outputs.accessible == 'true'
       run: ./wrk -t12 -c100 -d3600s ${{ secrets.URL }} > temp.txt
 
     - name: send telegram message on push
+      if: steps.check_url.outputs.accessible == 'true'
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
@@ -38,6 +50,7 @@ jobs:
         document: ./temp.txt  
         
     - name: parse and send data
+      if: steps.check_url.outputs.accessible == 'true'
       run: |
         python3 parse_and_send.py
       env:
